# anniversarator

./: .gitignore  Anniverserator.py  Event.py  License  README.md  anniverserator.py  installFail.txt  pyproject.toml
src/anniversarator/: Anniversarator.py  Event.py  __init__.py  __main__.py
